--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     .panel {
-  height: auto; /* Removed fixed height */
+  height: auto;
   padding: 16px;
   background: white;
   border-radius: 8px;
@@ -69,7 +69,7 @@
       margin-bottom: 16px;
       tab-size: 4;
       -moz-tab-size: 4;
-      height: 400px;
+      height: 300px;
     }
 
     textarea:focus {
